Create section with heading

--- a/kickstart-html-and-css/style/style.css
+++ b/kickstart-html-and-css/style/style.css
@@ -1,3 +1,21 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 h2{
     color: red;
+    font-style: italic;
+    font-weight: lighter;
+    font-family: 'Times New Roman', Times, serif;
+    text-decoration: overline;
+    font-size: 80px;
+    text-align: center;
+}
+
+#heading-parent{
+    background-color: rgb(37, 36, 35);
+    height: 600px;
+    padding: 100px 0;
+    width: 600px;
+    margin: 30px auto;
 }
