--- a/kickstart-html-and-css/style/style.css
+++ b/kickstart-html-and-css/style/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 h2{
-    color: red;
+    color: white;
     font-style: italic;
     font-weight: lighter;
     font-family: 'Times New Roman', Times, serif;
@@ -13,9 +13,30 @@ h2{
 }
 
 #heading-parent{
-    background-color: rgb(37, 36, 35);
+    background-image: linear-gradient(45deg,#fff,transparent), url(../asset/cat.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    clip-path: circle(51.5% at 50% 50%);
     height: 600px;
     padding: 100px 0;
-    width: 600px;
+    max-width: 1100px;
+    /* 1100px width paile ne naile full ne  */
     margin: 30px auto;
+}
+.btn-parent{
+    text-align: center;
+}
+
+.btn{
+    background-color:cornflowerblue ;
+    padding: 8px 15px;
+    color: white;
+    border-style: solid;
+    border-color: yellow;
+    border-width: 3px;
+    border-radius: 6px;
+   
+
+    /* merging padding inline element e kora jay na  */
 }
